# HuMob-Challenge-2023

./: .gitignore  .gitmodules  README.md  compose.gpu.yml  compose.yml  pyproject.toml  run.sh
.devcontainer/: devcontainer.json
conf/customs/: 000_task2.yaml  001_task1.yaml  002_task1.yaml  003_task1.yaml  004_task1.yaml
conf/rules/: 000_task1.yaml  000_task2.yaml  001_task1.yaml  001_task2.yaml
gcp/: change_git_admin.sh
geobleu/: validator.py
notebooks/: gnn_lstm.ipynb  memo.ipynb  plot_test_preds.ipynb  simple_prediction.ipynb  simple_predictions.ipynb  simple_predictions_v2.ipynb
notebooks/experiments/: baseline.ipynb  exp000.ipynb
src/: custom.py  fe.py  inference.py  logger.py  main.py  make_submission.py  rule.py  train.py  util.py
src/conf/: custom.yaml  rule.yaml
src/conf/templates/: debug.yaml  lstm_v1.yaml  model_conf.yaml  transfomer_v1.yaml
src/custom/: config_types.py  dataset.py  helper.py  metrics.py  model.py  util.py
src/custom/feature/: feature_extractor.py
src/custom/runner/v01/: fe.py  inference.py  make_submission.py  train.py
src/custom/runner/v02/: fe.py  inference.py  make_submission.py  train.py
src/dash/: human_movement.py  xy_trend.py
src/rule/cycle/: evaluate.py  imputer.py  make_submission.py
tests/: test_fe.py
